# buddy-bloom

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: database.py  main.py  models.py  seed.py
app/repository/: user_repository.py
app/services/: user_service.py
app/utils/: string.py
config/: app_config.py
data/: connections.csv  follows.csv  process_data.py  users.csv
wiki/: buddy-bloom-arch-v1-2.drawio  contributions.md  test_user_credentials.txt
